28 June 2004 Laurent Rineau
- Move mark_facets functions from Delaunay_mesh_2 to
  Conforming_Delaunay_triangulation_2.

17 May 2004 Menelaos Karavelas
- replaced Point by Point_2 in the demo in order to resolve clash with
  the Mac version of Qt

6 May 2000 Laurent Rineau
- workaround for CC-5.xx, in include/CGAL/Delaunay_mesh_2.h

3 April 2004 Sylvain Pion
- Regenerate demo/example makefiles to remove debug options,
  which makes PGCC pass.

Version 1.0.2 (10 February 2004) [rursu]
- Updated headers in examples

version 1.0.1 (2003/12/07) [Laurent]
--------------------------
Submit the documentation too.

version 1.0.0 (2003/12/07) [Laurent]
--------------------------
o Bix Conforming_Delaunay_triangulation_2 where a typename was missing.
o bench/bench.C now compile again.
o I think this version can be named 1.0.0 now.

version 0.9.5 (2003/11/28) [Laurent]
--------------------------
o Fix the deprecated use of RIGHTTURN in conforming.

version 0.9.4 (2003/11/5) [Laurent]
--------------------------
o submitted to the testsuite

version 0.9.4 (2003/10/9) [af]
--------------------------
o Bug fix in Is_locally_conforming_Gabriel and in Is_locally_conforming_Delaunay
o Removed redundant tests

version 0.9.4
--------------------------
o All names have changed.
o new concepts ConformingDelaunayTriangulationTraits_2 and
  ConformingDelaunayTriangulationTraits_2
o New internals and interface for Delaunay_mesh_2 and
  Conforming_Delaunay_triangulation_2
o updated documentation
o various changes in examples/ and demo/

version 0.9.3 (2003/05/10)
--------------------------
o internal release
o split of the code into Mesh_2 and Conform_2
o the demo mesh_demo can now displays clusters
o updated documentation (which is not really sync with the code)
o the interface of the demo has been improved

version 0.9.2 (2003/03/12)
--------------------------
o added a bench sub-directory
o fixed some gcc-3.2.1 compilation errors
o changes in the demo: